--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,21 @@
+language: "ruby"
+
+after_install: "bundle exec rake appraisal:install"
+before_script: "bundle exec rake db:build_databases db:create_tables"
+script:        "bundle exec rake spec"
+
 rvm:
   - 1.8.7
   - 1.9.2
-  - rbx
-  - rbx-2.0
+  - 1.9.3
   - ree
-  - jruby
 
 gemfile:
   - gemfiles/rails2.gemfile
-  - gemfiles/rails3.gemfile
+  - gemfiles/rails30.gemfile
   - gemfiles/rails31.gemfile
+  - gemfiles/rails32.gemfile
 
 notifications:
   recipients:
-    - gabriel.sobrinho@gmail.com
-    - thiago.pradi@gmail.com
+    - gaffneyc@gmail.com
